--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_EditarAnio.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/ConceptoPago/_EditarAnio.cshtml
@@ -15,6 +15,7 @@
                 @Html.Hidden("submited", 0)
                 @Html.AntiForgeryToken()
                 @Html.HiddenFor(model => model.I_RowID)
+                @Html.HiddenFor(model => model.I_ProcedenciaID)
                 @Html.Hidden("tipoObserv", tipoObs)
 
                 <div class="form-row">
@@ -34,7 +35,7 @@
                 <div class="form-row">
                     <div class="form-group col-3">
                         @Html.Label("Año", new { @class = "col-form-label", @for = "I_Anio" })
-                        @Html.TextBoxFor(model => model.Ano, new { @class = "form-control form-control-sm" })
+                        @Html.TextBoxFor(model => model.Ano, new { @class = "form-control form-control-sm", autofocus = "true" })
                     </div>
                     <div class="form-group col-3">
                         @Html.Label("Periodo", new { @class = "col-form-label", @for = "I_Periodo" })
@@ -49,25 +50,19 @@
                         @Html.DropDownListFor(model => model.I_ProcedenciaID, ViewBag.Procedencia as SelectList, "[ SELECCIONE ]", new { @class = "form-control form-control-sm", disabled = "true" })
                     </div>
                 </div>
-                @*<div class="form-row">
+                <div class="form-row">
                     <div class="form-group col-md-3 col-4">
-                        @Html.Label("Fecha Vencto", new { @class = "col-form-label", @for = "Fch_venc" })
-                        @Html.TextBoxFor(model => model.Fch_venc_s, new { @class = "form-control form-control-sm", @readonly = "true" })
+                        @Html.Label("Tipo de Alumno", new { @class = "col-form-label", @for = "Fch_venc" })
+                        @Html.DropDownListFor(model => model.Tip_alumno, ViewBag.TipoAlumno as SelectList, "[ SELECCIONE ]", new { @class = "form-control form-control-sm", disabled = "true" })
                     </div>
                     <div class="form-group col-md-6 col-5">
-                        @Html.Label("Categoría (Equivalencia)", new { @class = "col-form-label", @for = "I_CatPagoID" })
-                        @Html.DropDownListFor(model => model.I_CatPagoID, ViewBag.CategoriasBnc as SelectList, "[ SELECCIONE ]", new { @class = "form-control form-control-sm", disabled = "true" })
+                        @Html.Label("Grado", new { @class = "col-form-label", @for = "Grado" })
+                        @Html.DropDownListFor(model => model.Grado, ViewBag.Grados as SelectList, "[ SELECCIONE ]", new { @class = "form-control form-control-sm", disabled = "true" })
                     </div>
-                    <div class="form-group col-md-3 col-3">
-                        <label>&nbsp;</label>
-                        <div class="form-check px-5 pt-2">
-                            @Html.CheckBoxFor(model => model.C_mora, new { @class = "form-check-input", disabled = "true" })
-                            @Html.Label("Mora", new { @class = "col-check-label" })
-                        </div>
-                    </div>
-                </div>*@
+                </div>
 
-                <div class="col-md-12" style="display:none" id="loading">
+                <div class="col-md-12" style="display:none" id="loading">                     
+
                     <h6>Actualizando los datos...</h6>
 
                     <div class="progress">
