--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_Observaciones.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_Observaciones.cshtml
@@ -59,13 +59,13 @@
     </div>
 
 </div>
-<div class="modal-footer">
+<div id="main_modal_footer" class="modal-footer" style="justify-content:space-between">
+    <button type="button" id="btn_addObs" class="btn btn-info" data-dismiss="modal" data-url="@Url.Action("AgregarObservacion", ViewBag.Controller, new { id = ViewBag.RowID })"><i class="fa fa-plus"></i> Agregar</button>
     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
 </div>
 
 <script>
     $('.link-editar').on('click', function () {
-        debugger;
         $.ajax({
             url: $(this).data('url'),
             type: 'GET',
@@ -86,5 +86,30 @@
             }
 
         })
+    })
+
+    $('#btn_addObs').on('click', function () {
+        debugger;
+        $.ajax({
+            url: $(this).data('url'),
+            type: 'GET',
+            cache: false,
+            beforeSend: function () {
+                $('#processing').show();
+                $('#tabla-errores').hide()
+                $('#main_modal_footer').hide();
+           },
+            success: function (data) {
+                $('#edit-target').html(data);
+                $('#edit-target').show()
+            },
+            error: function () {
+                $('#tabla-errores').show()
+            },
+            complete: function () {
+                $('#processing').hide();
+            }
+
+        });
     })
 </script>
