--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_Layout.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     @Styles.Render("~/content/select")
     @Styles.Render("~/content/fonts")
     @Styles.Render("~/content/sweetalert2")
+    @Styles.Render("~/content/bootstrap4toggle")
     @Styles.Render("~/content/datatables")
 
     @Scripts.Render("~/bundles/jquery")
