--- a/publicacion/Views/ConceptoPago/_EditarPeriodo.cshtml
+++ b/publicacion/Views/ConceptoPago/_EditarPeriodo.cshtml
@@ -15,6 +15,7 @@
                 @Html.Hidden("submited", 0)
                 @Html.AntiForgeryToken()
                 @Html.HiddenFor(model => model.I_RowID)
+                @Html.HiddenFor(model => model.I_ProcedenciaID)
                 @Html.Hidden("tipoObserv", tipoObs)
 
                 <div class="form-row">
@@ -31,42 +32,36 @@
                         @Html.TextBoxFor(model => model.Descripcio, new { @class = "form-control form-control-sm", @readonly = "true" })
                     </div>
                 </div>
-                @*<div class="form-row">
-                    <div class="form-group col-md-3 col-4">
-                        @Html.Label("Fecha Vencto", new { @class = "col-form-label", @for = "Fch_venc" })
-                        @Html.TextBoxFor(model => model.Fch_venc_s, new { @class = "form-control form-control-sm", @readonly = "true" })
+                <div class="form-row">
+                    <div class="form-group col-3">
+                        @Html.Label("Año", new { @class = "col-form-label", @for = "Ano" })
+                        @Html.TextBoxFor(model => model.Ano, new { @class = "form-control form-control-sm", @readonly = "true"})
                     </div>
-                    <div class="form-group col-md-6 col-5">
-                        @Html.Label("Categoría (Equivalencia)", new { @class = "col-form-label", @for = "I_CatPagoID" })
-                        @Html.DropDownListFor(model => model.I_CatPagoID, ViewBag.CategoriasBnc as SelectList, "[ SELECCIONE ]", new { @class = "form-control form-control-sm", disabled = "true" })
+                    <div class="form-group col-3">
+                        @Html.Label("Periodo", new { @class = "col-form-label", @for = "I_TipPerID" })
+                        @Html.DropDownListFor(model => model.I_TipPerID, ViewBag.Periodos as SelectList, "[ SELECCIONE ]", new { @class = "form-control form-control-sm" })
                     </div>
-                    <div class="form-group col-md-3 col-3">
-                        <label>&nbsp;</label>
-                        <div class="form-check px-5 pt-2">
-                            @Html.CheckBoxFor(model => model.C_mora, new { @class = "form-check-input", disabled = "true" })
-                            @Html.Label("Mora", new { @class = "col-check-label" })
-                        </div>
+                    <div class="form-group col-3">
+                        @Html.Label("Monto", new { @class = "col-form-label", @for = "Monto" })
+                        @Html.TextBoxFor(model => model.Monto, new { @class = "form-control form-control-sm", @readonly = "true" })
+                    </div>
+                    <div class="form-group col-3">
+                        @Html.Label("Procedencia", new { @class = "col-form-label" })
+                        @Html.DropDownListFor(model => model.I_ProcedenciaID, ViewBag.Procedencia as SelectList, "[ SELECCIONE ]", new { @class = "form-control form-control-sm", disabled = "true" })
                     </div>
                 </div>
                 <div class="form-row">
-                    <div class="form-group col-3">
-                        @Html.Label("Año", new { @class = "col-form-label", @for = "I_Anio" })
-                        @Html.TextBoxFor(model => model.I_Anio, new { @class = "form-control form-control-sm" })
+                    <div class="form-group col-md-3 col-4">
+                        @Html.Label("Tipo de Alumno", new { @class = "col-form-label", @for = "I_TipAluID" })
+                        @Html.DropDownListFor(model => model.I_TipAluID, ViewBag.TipoAlumno as SelectList, "[ SELECCIONE ]", new { @class = "form-control form-control-sm", disabled = "true" })
                     </div>
-                    <div class="form-group col-3">
-                        @Html.Label("Periodo", new { @class = "col-form-label", @for = "I_Periodo" })
-                        @Html.DropDownListFor(model => model.I_Periodo, ViewBag.Periodos as SelectList, "[ SELECCIONE ]", new { @class = "form-control form-control-sm", disabled = "true" })
+                    <div class="form-group col-md-3 col-4">
+                        @Html.Label("Grado", new { @class = "col-form-label", @for = "I_TipGradoID" })
+                        @Html.DropDownListFor(model => model.I_TipGradoID, ViewBag.Grados as SelectList, "[ SELECCIONE ]", new { @class = "form-control form-control-sm", disabled = "true" })
                     </div>
-                    <div class="form-group col-3">
-                        @Html.Label("Prioridad", new { @class = "col-md-4 col-form-label", @for = "Prioridad" })
-                        @Html.TextBoxFor(model => model.Prioridad, new { @class = "form-control form-control-sm", @readonly = "true" })
-                    </div>
-                    <div class="form-group col-3">
-                        @Html.Label("Procedencia", new { @class = "col-md-4 col-form-label" })
-                        @Html.TextBoxFor(model => model.I_ProcedenciaID, new { @class = "form-control form-control-sm", @readonly = "true" })
-                    </div>
-                </div>*@
+                </div>
 
+                <br />
                 <div class="col-md-12" style="display:none" id="loading">
                     <h6>Actualizando los datos...</h6>
 
@@ -82,7 +77,7 @@
         </div>
     </div>
     <div class="row mt-4">
-        @*@Html.Partial("_OtrasTablas", Model);*@
+        @Html.Partial("_OtrasTablas", Model)
     </div>
 </div>
 
