--- a/publicacion/Views/CuotaPago/_EditarAnio.cshtml
+++ b/publicacion/Views/CuotaPago/_EditarAnio.cshtml
@@ -99,7 +99,7 @@
         Swal.fire({
             title: "¡Atención, posible incosistencia!",
             text: "Se ha identificado que la cuota de pago se encuentra asociada a más de un año.\n" +
-                "Al guardar, el año tomará el valor seleccionado y deberá corregir las cuotas de pago en los  concepto de pago y obligaciones relacionados.",
+                "Al guardar, el año tomará el valor seleccionado y deberá corregir las cuotas de pago en los conceptos de pago y obligaciones relacionados.",
             type: "warning",
             showCancelButton: true,
             confirmButtonColor: '#ff830f',
