--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Obligaciones/_DatosMigracion.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/Obligaciones/_DatosMigracion.cshtml
@@ -2,30 +2,52 @@
 @model IEnumerable<WebMigradorCtasPorCobrar.Models.Entities.Migracion.Obligacion>
 @using GridMvc.Html
 
+@{
+    string str_procedencia = ViewBag.Procedencia.ToString();
+}
 
-<div class="table-responsive" style="min-height:300px">
+<div class="row mb-5 form-inline">
+    <div class="col-md-2 col-sm-3">
+        <label class="control-label">Filtro observación</label>
+    </div>
+    <div class="">
+        @Html.DropDownList("cboTipoObs", ViewBag.Observaciones as SelectList, "- SIN FILTRO -", new { @class = "form-control" })
+    </div>
+
+    <div class="col-md-2 col-sm-3" id="link-exportar">
+        <a href="@Url.Action("ExportarObservaciones", "Obligaciones", new { id = ViewBag.IdObservacion, procedencia = ViewBag.Procedencia })">
+            <i class="fa fa-file-excel-o"></i> Exportar Observaciones
+        </a>
+    </div>
+    <div id="spinner-loading" class="spinner-border text-info mx-4" role="status" style="display:none;">
+        <span class="sr-only">Loading...</span>
+    </div>
+</div>
+
+<div class="table-responsive" style="min-height: 300px; font-size: 13px;">
     @Html.Grid(Model).Columns(columns =>
 {
     columns.Add(c => c.Ano).Css("text-center").Titled("Año").Filterable(true);
     columns.Add(c => c.P).Css("text-center").Titled("Periodo").Filterable(true);
-    columns.Add(c => c.Cuota_pago).Css("text-center").Titled("Cuota Pago").Filterable(true);
+    columns.Add(c => c.Cuota_pago_desc).Titled("Cuota Pago").Filterable(true);
     columns.Add(c => c.Cod_alu).Titled("Cod. Alumno").Filterable(true);
     columns.Add(c => c.Fch_venc).RenderValueAs(model => model.Fch_venc.ToShortDateString()).Titled("Fec. Venc.").Filterable(true);
     columns.Add(c => c.Monto).Css("text-right").Titled("Monto").Filterable(true);
-    columns.Add(c => c.B_Migrable).Css("text-center").Encoded(false).Sanitized(false)
-           .RenderValueAs(model => model.B_Migrable ? Html.Raw("<i class=\"fa fa-check-circle text-success\"></i>") : Html.Raw("<i class=\"fa fa-times-circle text-danger\"></i>"))
-           .Titled("Migrable").Filterable(true);
-    columns.Add(c => c.B_Migrado).Css("text-center").Encoded(false).Sanitized(false)
-            .RenderValueAs(model => model.B_Migrado ? Html.Raw("<i class=\"fa fa-check-circle text-success\"></i>") : Html.Raw("<i class=\"fa fa-times-circle text-danger\"></i>"))
-            .Titled("Migrado").Filterable(true);
+    columns.Add().SetWidth(150).Css("text-center").Encoded(false).Sanitized(false).Titled("Detalle conceptos")
+                 .RenderValueAs(model => @Html.Raw($"<a href=\"{ Url.Action("CargarDetalle", "Obligaciones", new { id = model.I_RowID, procedencia = str_procedencia, area = "" })}\" class=\"btn btn-xs btn-warning modal-link-lg\">" +
+                                                       $"<i class=\"bi-list-check\" aria-hidden=\"true\">&nbsp;</i><span class=\"d-none d-md-inline-block\">Ver detalle</span>" +
+                                                   $"</a>"));
+    columns.Add(c => c.B_Migrable).Css("text-center").Encoded(false).Sanitized(false).Titled("Migrable").Filterable(true)
+            .RenderValueAs(model => model.B_Migrable ? Html.Raw("<span class=\"h5\"><i class=\"fa fa-check-circle text-success\"></i></span>")
+                                                     : Html.Raw("<span class=\"h5\"><i class=\"fa fa-times-circle text-danger\"></i></span>"));
+    columns.Add(c => c.B_Migrado).Css("text-center").Encoded(false).Sanitized(false).Titled("Migrado").Filterable(true)
+            .RenderValueAs(model => model.B_Migrado ? Html.Raw("<span class=\"h5\"><i class=\"fa fa-check-circle text-success\"></i></span>")
+                                                    : Html.Raw("<span class=\"h5\"><i class=\"fa fa-times-circle text-danger\"></i></span>"));
     columns.Add().SetWidth(150).Css("text-right").Encoded(false).Sanitized(false)
-           .RenderValueAs(model => model.B_Migrable ?
-                                    @Html.Raw("")  :
-                                    @Html.Raw($"<a href=\"{ Url.Action("Observaciones", "Obligaciones", new { id = model.I_RowID, area = "" })}\" class=\"modal-link\"><i class=\"fa fa-search-plus\" aria-hidden=\"true\">&nbsp;</i><span class=\"d-none d-md-inline-block\">Observacion</span></a>"));
-    columns.Add().SetWidth(120).Css("text-right").Encoded(false).Sanitized(false)
-                   .RenderValueAs(model => model.B_Migrable ?
-                                        @Html.Raw("")
-                                        : @Html.Raw($"<a href=\"{ Url.Action("Editar", "Obligaciones", new { id = model.I_RowID, area = "" })}\" class=\"modal-link\"><i class=\"fa fa-pencil-square-o\" aria-hidden=\"true\">&nbsp;</i><span class=\"d-none d-md-inline-block\">Corregir</span></a>"));
+                 .RenderValueAs(model => model.B_Migrable ? @Html.Raw("")
+                                                          : @Html.Raw($"<a href=\"{ Url.Action("Observaciones", "Obligaciones", new { id = model.I_RowID, area = "" })}\" class=\"modal-link-lg\">" +
+                                                                          $"<i class=\"fa fa-search-plus\" aria-hidden=\"true\">&nbsp;</i><span class=\"d-none d-md-inline-block\">Observaciones</span>" +
+                                                                      $"</a>"));
 }
     ).WithPaging(20).Sortable(true).WithGridItemsCount("Registros encontrados").EmptyText("No se encontraron registros")
 </div>
@@ -35,4 +57,11 @@
     $('#btn-tp').removeClass('active');
     $('#btn-mg').addClass('active');
     $('#btn-proc').removeClass('active');
+
+    $('#cboTipoObs').on('change', function () {
+        $('#link-exportar').hide();
+        $('#spinner-loading').show();
+        location.href = '@Url.Action(str_procedencia, "Obligaciones", new { area = "", partial = "DatosMigracion" })' + '&tipo_obs=' + this.value;
+    })
+
 </script>
