--- a/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/Cuded.cshtml
+++ b/WebMigradorCtasPorCobrar/WebMigradorCtasPorCobrar/Views/CuotaPago/Cuded.cshtml
@@ -15,6 +15,7 @@
         <fieldset>
             <legend class="pb-3 font-weight-bold">OPCIONES</legend>
             <a class="btn btn-outline-dark btn-block my-3" id="btn-tp" href="@Url.Action("Cuded", "CuotaPago", new { partial = "TemporalPagos" })">Temporal de pagos</a>
+            <a class="btn btn-outline-dark btn-block my-3" id="btn-tp" href="@Url.Action("Cuded", "CuotaPago", new { partial = "CtasPorCobrar" })">Temporal de pagos</a>
             <a class="btn btn-outline-dark btn-block my-3" id="btn-proc" href="@Url.Action("Cuded", "CuotaPago", new { partial = "ProcesoMigracion" })">Proceso de migración</a>
             <a class="btn btn-outline-dark btn-block my-3" id="btn-mg" href="@Url.Action("Cuded", "CuotaPago", new { partial = "DatosMigracion" })">Registros para migración</a>
         </fieldset>
